# DGC-Platform-Where-Digital-Art-Comes-Alive

./: .env.example  .gitignore  CHANGELOG.md  COMPETITIVE_ANALYSIS_2026.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_QUICK_START.md  DGC_IMPLEMENTATION_ROADMAP.md  DGC_PLATFORM_RUNNING_GUIDE.md  DGC_REVOLUTIONARY_USP_2026.md  DGC_TECHNICAL_FLOWCHARTS.md  FINAL_PUSH_COMMANDS.md  GITHUB_UPLOAD_INSTRUCTIONS.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PUSH_TO_GITHUB_GUIDE.md  README.md  REVOLUTIONARY_FEATURES_TO_ADD.md  SECURITY.md  SETUP_AND_RUN_GUIDE.md  STARTUP_STRATEGY_2026.md  docker-compose.prod.yml  docker-compose.yml  package.json  start.sh  validate-deployment.sh
.github/workflows/: ci-complete.yml  deploy-github-pages.yml  release.yml
backend/: .env.example  .flake8  CHECKPOINT_REPORT.md  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  api.py  config.py  models.py
backend/app/services/: __init__.py  agent_controller.py  blockchain.py  dna_engine.py  emotion_ai.py  generation.py  ipfs.py  search_engine.py  wallet_service.py
backend/tests/: __init__.py  conftest.py  test_api_properties.py  test_generation_properties.py  test_integration.py  test_ipfs_properties.py  test_metadata_properties.py
contracts/: .env.example  .prettierrc  Dockerfile  FOUNDRY_SETUP.md  foundry.toml  hardhat.config.js  package.json  simple-test.js  simple_bounds_test.js  test-compile.js  test-dgc-compile.js  test-dgc-simple.js  test-royalty-compile.js  test-royalty-simple.js  test_env.sh  verify-structure.js  verify_reentrancy_protection.js  verify_royalty_bounds.js
contracts/contracts/: DGCToken.sol  MaliciousRecipient.sol  Marketplace.sol  ProvenanceRegistry.sol  RoyaltySplitter.sol
contracts/scripts/: Deploy.s.sol  deploy.js  mint.js  registerAndMint.js
contracts/test/: DerivationChainIntegrity.test.js  Marketplace.test.js  ProvenanceImmutability.test.js  ProvenanceRegistry.test.js  ReentrancyProtection.test.js  RoyaltySplitter.test.js
docs/: DEPLOYMENT_GUIDE.md
docs/archive/: .gitkeep  CODE_QUALITY_FIXES_COMPLETE.md  COMPREHENSIVE_OVERHAUL_COMPLETE.md  FINAL_TEST_STATUS_REPORT.md  FIXES_APPLIED_REPORT.md  FRONTEND_OVERHAUL_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  METAMASK_REAL_DATA_SUMMARY.md  PLATFORM_STATUS_20260101_124155.md  PROFESSIONAL_DESIGN_COMPLETE.md  REAL_METAMASK_DATA_INTEGRATION_COMPLETE.md  REAL_TIME_ENHANCEMENT_COMPLETE.md  REMAINING_TEST_FIXES.md  TEST_REPORT_20260101_124603.md  TEST_REPORT_20260101_124730.md  (+14 more)
frontend/: .env.example  Dockerfile  IMPLEMENTATION_STATUS.md  WIREFRAMES.md  index.html  nginx.conf  package.json  verify-build.js  vite.config.js
(+64 files in other folders)
